# sharinggpu_demo

./: .gitignore  README.md
backend_cpp/: CMakeLists.txt
backend_cpp/src/: Routes.cpp  Sim.cpp  State.hpp  Utility.hpp  main.cpp
backend_py/: main.py  models.py  scheduler_adapter.py  scheduler_adapter_fixed.py
backend_pycpp/cpp/: CMakeLists.txt  Sim.hpp  State.cpp  cxxsched_module.cpp
backend_pycpp/py/: main.py  scheduler_cxx_adapter.py
webui/: .env  README.md  package.json  pnpm-lock.yaml  vite.config.dev.ts
webui/docs/: prd.md
webui/src/: App.tsx  index.css  routes.tsx
webui/src/components/common/: Footer.tsx  Header.tsx
webui/src/db/: api.ts  api_rest.ts
webui/src/pages/: AdminDashboard.tsx  ComputeDemand.tsx  ComputeSupply.tsx  Home.tsx  Login.backup.tsx  Login.tsx  ResourceManagement.tsx  SamplePage.tsx  TestLogin.tsx
webui/src/types/: types.ts
webui/supabase/migrations/: 01_create_compute_sharing_tables.sql
